[package]
name = "bevy-wasm-tasks"
# Major and minor version here should match bevy's. Patch version can vary.
version = "0.13.0"
edition = "2021"
license = "CC0-1.0"
description = "Simple integration of WASM tasks into a Bevy app for background processing."
homepage = "https://crates.io/crates/bevy-wasm-tasks"
repository = "https://github.com/tekacs/bevy-wasm-tasks"
keywords = ["gamedev", "bevy", "wasm", "async", "plugin"]
categories = ["game-development", "asynchronous"]

[features]
default = []
tokio = ["tokio/full"]
wasm = ["tokio/rt"]

[dependencies]
bevy_app = { git = "https://gitee.com/happydpc/bevy", package = "bevy_app" }
bevy_ecs = { git = "https://gitee.com/happydpc/bevy", package = "bevy_ecs" }
dashmap = "6.1.0"
futures-util = { version = "0.3", features = ["channel"] }
tokio = { version = "1", features = ["sync", "rt"] }
wasm-bindgen-futures = { version = "0.4.41" }
